<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- screen title    -->
    <TextView
        android:id="@+id/textViewAddMarkerPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/add_marker_page_title"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- cancel button    -->
    <ImageView
        android:id="@+id/buttonCancelMarker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- offered services -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewAddMarkerPageTitle"
        app:layout_goneMarginStart="8dp">

        <TextView
            android:id="@+id/textViewMarkerTypeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_marker_type_title"
            android:textSize="18sp" />

        <CheckBox
            android:id="@+id/checkboxDogsitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_dogsitter_marker_type" />

        <CheckBox
            android:id="@+id/checkboxFood"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_food_marker_type" />

        <CheckBox
            android:id="@+id/checkboxMedication"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check_box_medication_marker_type" />
    </LinearLayout>

    <!-- save/delete buttons   -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- delete marker button        -->
        <ImageView
            android:id="@+id/buttonDeleteMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_delete_marker"
            android:layout_marginEnd="40dp"
            android:visibility="gone" />

        <!-- save marker button        -->
        <ImageView
            android:id="@+id/buttonSaveMarker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:src="@drawable/ic_add_marker" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>